added cover art and icon art

--- a/Icons Toolbox/ui.html
+++ b/Icons Toolbox/ui.html
@@ -526,7 +526,7 @@
           data-function-name="flattenAll"
         >
           <span class="tooltip">use only in icons set file</span>
-          flatten all icons in page
+          flatten all icons on the page
         </button>
       </div>
     </section>
