--- a/site/public/index.html
+++ b/site/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="FigmaOP-open source Figma plugin: to help designers and developers work faste, smarter and intentionally"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
