added destructive color and info to flatten all button

--- a/Icons Toolbox/ui.html
+++ b/Icons Toolbox/ui.html
@@ -38,7 +38,7 @@
         --fs-h1: 1.4rem;
         --fs-h2: 1.2rem;
         --fs-label: 1.1rem;
-        
+
         --fs-button: 1.1rem;
         --fs-info: 1rem;
         --fs-tooltip: 1.1rem;
@@ -238,8 +238,12 @@
         color: var(--clr-black-8);
         box-shadow: inset 0 0 0 1px var(--clr-black-8);
       }
+      button.btn--destructive {
+        color: var(--clr-white);
+        background: var(--clr-red);
+      }
 
-      button.btn--primary:not(:disabled):is(:hover, :focus) {
+      :is(button.btn--destructive, button.btn--primary):not(:disabled):is(:hover, :focus) {
         outline: 0;
         box-shadow: inset 0 0 0 2px var(--clr-black-3);
       }
@@ -247,6 +251,7 @@
         outline: 0;
         box-shadow: inset 0 0 0 2px var(--clr-blue);
       }
+
       button:active {
         transform: scale(1.025);
       }
@@ -264,10 +269,11 @@
       .row {
         flex-direction: row;
       }
-      button.btn--primary:disabled {
+      :is(button.btn--destructive, button.btn--primary):disabled {
         background: var(--clr-black-3);
         color: var(--clr-black-3);
       }
+
       button.btn--standard:disabled {
         box-shadow: inset 0 0 0 1px var(--clr-black-3);
         color: var(--clr-black-3);
@@ -522,12 +528,29 @@
         </div>
         <button
           id="flatten-all-icons-btn"
-          class="btn--primary"
+          class="btn--destructive"
           data-function-name="flattenAll"
         >
           <span class="tooltip">use only in icons set file</span>
           flatten all icons on the page
         </button>
+        <div class="info">
+          <svg
+            class="info__icon"
+            width="16"
+            height="16"
+            viewBox="0 0 16 16"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M8 14C11.314 14 14 11.314 14 8C14 4.686 11.314 2 8 2C4.686 2 2 4.686 2 8C2 11.314 4.686 14 8 14ZM8 13C5.054 13 3 10.946 3 8C3 5.054 5.054 3 8 3C10.946 3 13 5.054 13 8C13 10.946 10.946 13 8 13ZM7.5 7.333H8.5V9.5V11.333H7.5V9.5V7.333ZM7.334 5.333C7.334 4.965 7.632 4.667 8.001 4.667C8.369 4.667 8.667 4.965 8.667 5.333C8.667 5.702 8.369 6 8.001 6C7.632 6 7.334 5.702 7.334 5.333Z"
+              fill="black"
+              fill-opacity="0.3"
+            />
+          </svg>
+          flattens all frames on the page- be minded
+        </div>
       </div>
     </section>
     <section class="duplicate-icons">
