added favicons to all devices

--- a/site/public/index.html
+++ b/site/public/index.html
@@ -2,18 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="FigmaOP-open source Figma plugin: to help designers and developers work faste, smarter and intentionally"
     />
+    <meta name="title" content="FigmaOP" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" sizes="any" />
+    <link rel="icon" href="%PUBLIC_URL%/logosvg.svg" type="image/svg+xml" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="image_src" href="%PUBLIC_URL%/socialpreview.png" />
 
-    <title>FigmaOp</title>
+    <title>FigmaOP</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
