meta tag for apple-mobile-web and typo in index.html

--- a/site/public/index.html
+++ b/site/public/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="FigmaOP-open source Figma plugin: to help designers and developers work faste, smarter and intentionally"
+      content="FigmaOP-open source Figma plugin: to help designers and developers work faster, smarter and intentionally"
     />
     <meta name="title" content="FigmaOP" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" sizes="any" />
